# ollama-orchestra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: install.yml
docs/: production-patterns.md  reasoning-models.md  release-process.md
examples/: multi_endpoint_embeddings.py  reasoning_chat.py  semaphore_pool.py
scripts/: smoke.py
src/ollama_orchestra/: __init__.py  chat.py  chunking.py  embeddings.py  health.py  queue.py  reasoning.py
tests/: test_chat.py  test_chunking.py  test_embeddings.py  test_queue.py  test_reasoning.py
