[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-orchestra"
version = "0.1.0"
description = "Production helpers for running Ollama under concurrent load across local and remote endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Jornet", email = "benjamin.jornet@gmail.com" }]
keywords = ["ollama", "llm", "embeddings", "concurrency", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pybreaker>=1.2",
]

[project.urls]
Homepage = "https://github.com/benjaminjornet/ollama-orchestra"
Issues = "https://github.com/benjaminjornet/ollama-orchestra/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_orchestra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
